--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@prisma/client": "6.19",
+    "argon2": "^0.44.0",
     "dotenv": "^17.2.4",
+    "jsonwebtoken": "^9.0.3",
     "next": "16.1.6",
     "postcss": "^8.5.6",
     "react": "19.2.3",
@@ -20,6 +22,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.19.33",
     "@types/react": "^19",
     "@types/react-dom": "^19",
