--- a/package.json
+++ b/package.json
@@ -14,17 +14,16 @@
     "@prisma/client": "6.19",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-navigation-menu": "^1.2.14",
+    "argon2": "^0.44.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-
-    "argon2": "^0.44.0",
-
     "dotenv": "^17.2.4",
     "jsonwebtoken": "^9.0.3",
     "next": "16.1.6",
     "postcss": "^8.5.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
@@ -35,6 +34,8 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
+    "prettier": "^3.8.1",
+    "prettier-plugin-tailwindcss": "^0.7.2",
     "prisma": "6.19",
     "tailwindcss": "^4.1.18",
     "typescript": "^5"
